# dos-guide

./: .gitignore  404.html  README.md  appendix.html  book.toml  ch00-02-dos-api.md~  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-dos-api.html  ch01-02-dos-api.md~  ch02-00-optical-model.html  ch02-01-installation.html  ch02-02-example.html  ch03-00-fem.html  ch03-01-installation.html  ch03-02-example.html  controllers.html  dos-io-variants.html  fem.html  fem_dos-interface.html  fem_dos-interface.md~  fem_installation.html  getting-started.html  getting-started_dos-interface.html  getting-started_installation.html  index.html  introduction.html  optical-model.html  optical-model_dos-interface.html  optical-model_installation.html  print.html  searchindex.js  searchindex.json  wind-loading.html
controllers/: simulink.html  simulink.md~
examples/: Makefile
examples/ch01-02-dos-api/src/: main.rs
examples/controllers/simulink/: Cargo.toml
examples/controllers/simulink/src/: main.rs
examples/fem/: Cargo.toml
examples/getting-started/src/: main.rs
examples/optical-model/gmt_optical_model/: Cargo.toml
examples/optical-model/gmt_optical_sensor_model/: Cargo.toml
examples/optical-model/gmt_optical_sensor_model/src/: main.rs
examples/optical-model_dos-interface/gmt_optical_sensor_model/: Cargo.toml
fem/: dos-interface.html  installation.html
getting-started/: dos-interface.html  dos-interface.md~  installation.html
html/: 404.html  Makefile  appendix.html  index.html  print.html  searchindex.js  searchindex.json  wind-loading.html  wind-loading.md~
html/controllers/: simulink.html
html/fem/: dos-interface.md~
html/optical-model/: dos-interface.html
html/wind-loading/: dos-interface.html
markdown/: controllers.md  dos-io-variants.md  introduction.md  wind-loading.md
markdown/controllers/: simulink.md
markdown/fem/: dos-interface.md  installation.md
markdown/getting-started/: dos-interface.md  installation.md
markdown/optical-model/: dos-interface.md  installation.md
markdown/wind-loading/: dos-interface.md  installation.md
optical-model/: dos-interface.html  installation.html
release/: Makefile  dos.main.tex  interface-table.tex  model-table.tex
src/: SUMMARY.md  ch00-02-dos-api.md  ch01-00-getting-started.md  ch01-02-dos-api.md  ch02-00-optical-model.md  dos-io-variants.md  fem.md  fem_installation.md  getting-started_dos-interface.md  introduction.md  optical-model_dos-interface.md  optical-model_installation.md  wind-loading_dos-interface.md
src/controllers/: simulink.md
src/fem/: dos-interface.md  installation.md
src/fem/examples/src/: main.rs
src/getting-started/: dos-interface.md
src/getting-started/examples/: Cargo.toml
src/optical-model/: dos-interface.md  installation.md
src/optical-model/examples/gmt_optical_model/: Cargo.toml
src/optical-model/examples/gmt_optical_model/src/: main.rs
src/optical-model/examples/gmt_optical_sensor_model/src/: main.rs
src/wind-loading/: dos-interface.md  installation.md
src/wind-loading/examples/: Cargo.toml
src/wind-loading/examples/src/: main.rs
wind-loading/: dos-interface.html  installation.html  installation.md~
