[package]
name = "fem_dos-interface"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ANCHOR: depends
dosio = { git = "https://github.com/rconan/dosio.git", branch = "main" }
fem = { path = "/home/rconan/projects/fem", features = ["dos"] }
simple_logger = "1.11.0"
# ANCHOR_END: depends
