[package]
name = "gmt_optical_sensor_model"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

[dependencies]
dosio = { git = "https://github.com/rconan/dosio.git", branch = "main" }
# should be the git url, but with the git repo, CEO does not compile? 
crseo = { path = "/home/rconan/projects/crseo" , features = ["dosio"]}
